--- a/mandelbrot/Cargo.toml
+++ b/mandelbrot/Cargo.toml
@@ -18,6 +18,8 @@ wasm-bindgen = "0.2.84"
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.7", optional = true }
+js-sys = "0.3.69"
+wee_alloc = { version = "0.4.5", optional = true }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
@@ -25,3 +27,15 @@ wasm-bindgen-test = "0.3.34"
 [profile.release]
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
+
+[dependencies.web-sys]
+version = "0.3.69"
+features = [
+    'CanvasRenderingContext2d',
+    'Document',
+    'Element',
+    'HtmlCanvasElement',
+    'ImageData',
+    'Performance',
+    'Window',
+]
